--- a/marvel-challenge/package.json
+++ b/marvel-challenge/package.json
@@ -33,6 +33,8 @@
     "eslint-config-next": "14.2.5",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
-    "jsdom": "^24.1.1"
+    "jest-fetch-mock": "^3.0.3",
+    "jsdom": "^24.1.1",
+    "whatwg-fetch": "^3.6.20"
   }
 }
